--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,16 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: Your Awesome Site
+title: Saivian 全球首創 刷卡現金回饋20%
 email: your-email@domain.com
 author: Your Name
 description: > # "Write an awesome description for your new site here. 
-  You can edit this line in _config.yml. It will appear in your document 
-  head meta (for Google search results) and in your feed.xml site 
-  description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+  美國大數據公司，只要提供您的刷卡消費習慣，享有信用卡現金回饋20%
+#  You can edit this line in _config.yml. It will appear in your document 
+#  head meta (for Google search results) and in your feed.xml site 
+#  description.
+copyright: 'Copyright &copy; 2016 Saivian. All Rights Reserved.'
+#credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -26,9 +27,11 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
-  - title: linkedin
-    url: 
+  - title: facebook
+    url: https://www.facebook.com/taiwan.saivian/?fref=ts
+  - title: 聯絡我了解更多
+    url: mailto:liang751215@gmail.com  
+  - title: 立即加入
+    url: mailto:liang751215@gmail.com
+social1:
+  - title: test
